--- a/index.html
+++ b/index.html
@@ -27,35 +27,28 @@
                         <span class="text-info__message">Solo letras minúsculas y sin acentos</span>
                     </article>
                     <article class="text-info__actions">
-                        <button type="button" class="text-info__action-encrypt">Encriptar</button>
-                        <button type="button" class="text-info__action-decrypt">Desencriptar</button>
-                    </article>
-                </section>
-                <section class="card">
-                    <article class="card__content">
-                        <!-- <h2 class="card__title">Ningún mensaje fue encontrado</h2>
-                        <p class="card_description">Ingresa el texto que desees encriptar o desencriptar.</p> -->
-                        <p class="card_text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci montes, sit et diam risus
-                            scelerisque
-                            vitae est. Tortor maecenas nunc ut laoreet. Eget diam mauris quam quisque ut eget fringilla
-                            sit
-                            elit. Libero, sodales duis fames id diam feugiat aliquet non egestas.
-                        </p>
-                        <button class="text-info__action-copy">
-                            Copiar
-                        </button>
+                        <button id="encrypt" type="button" class="text-info__action-encrypt">Encriptar</button>
+                        <button id="decrypt" type="button" class="text-info__action-decrypt">Desencriptar</button>
                     </article>
                 </section>
             </div>
         </main>
-        <div class="message-container">
-            <img class="message-container__img" src="assets/Muñeco.png" alt="Imagen de mujer observando un diamante">
-            <div class="message-container__text">
+        <section class="card">
+            <article class="card__content" id="empty-message">
+                <img class="text-info__icon" src="/assets/Muñeco.png" alt="icon">
                 <h2 class="card__title">Ningún mensaje fue encontrado</h2>
                 <p class="card_description">Ingresa el texto que desees encriptar o desencriptar.</p>
+            </article>
+            <div id="encrypted-message">
+                <article class="card__content">
+                    <textarea name="encrypted-text-area" id="encrypted-text-area"
+                        disabled>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci montes, sit et diam risus scelerisque vitae est. Tortor maecenas nunc ut laoreet. Eget diam mauris quam quisque ut eget fringilla sit elit. Libero, sodales duis fames id diam feugiat aliquet non egestas.</textarea>
+                    <button class="text-info__action-copy" id="copy">
+                        Copiar
+                    </button>
+                </article>
             </div>
-        </div>
+        </section>
     </div>
 
     <footer>
