chore: Update image paths in index.html
This commit updates the image paths in the index.html file to use relative paths instead of absolute paths. The previous absolute paths were causing issues with loading the images correctly. By using relative paths, the images will be loaded correctly regardless of the file's location within the project.

This change improves the functionality and ensures that the images are displayed correctly in the application.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="/assets/icon/Logo.svg" alt="Alura logo">
+            <img src="assets/icon/Logo.svg" alt="Alura logo">
         </header>
         <main class="content-container">
             <div>
@@ -23,7 +23,7 @@
                 </section>
                 <section class="text-info">
                     <article class="text-info__instructions">
-                        <img class="text-info__icon" src="/assets/icon/Interrogacion.svg" alt="icon">
+                        <img class="text-info__icon" src="assets/icon/Interrogacion.svg" alt="icon">
                         <span class="text-info__message">Solo letras minúsculas y sin acentos</span>
                     </article>
                     <article class="text-info__actions">
@@ -35,7 +35,7 @@
         </main>
         <section class="card">
             <article class="card__content" id="empty-message">
-                <img class="text-info__icon" src="/assets/Muñeco.png" alt="icon">
+                <img class="text-info__icon" src="assets/Muñeco.png" alt="icon">
                 <h2 class="card__title">Ningún mensaje fue encontrado</h2>
                 <p class="card_description">Ingresa el texto que desees encriptar o desencriptar.</p>
             </article>
@@ -56,7 +56,7 @@
         <a href="https://www.linkedin.com/in/juanfelipecubillosprado/" target="_blank"> Feli</a>
     </footer>
 
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
