chore: Update CSS and HTML files for improved UI and functionality

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </main>
         <section class="card">
             <article class="card__content" id="empty-message">
-                <img class="text-info__icon" src="assets/Muñeco.png" alt="icon">
+                <img class="card__content__image" src="assets/Muñeco.png" alt="icon">
                 <h2 class="card__title">Ningún mensaje fue encontrado</h2>
                 <p class="card_description">Ingresa el texto que desees encriptar o desencriptar.</p>
             </article>
